[PLAT-7817]: Universe Creation small UI issues
Summary:
The following are the issues:
1. In the new Universe creation UI we are using multiple different styles for medium size buttons. Let’s make sure they are using the same component and style.
2. Use button groups with no shadow for the replication factor selector
3. The paddings for the dropdown and type ahead drop-down are different in different cases.
4. The type ahead selector and drop-down selector need to have consistent padding.
5. Remove the gray circle that appears on hover under the arrow in the “Type ahead select component, Radio button and Checkbox”.
6. The component type used for selecting “Number of read replicas“ is incorrect. (8.png)
7. The paradigm used to allow user “Clear read Replica“ is incorrect. Please use a Medium size secondary button (outlines)
8. Buttons should not be responsive at all. the button “Back to primary cluster“ on the Read Replica config page (during cluster creation) breaks into two lines when the screen is smaller.
9. On smaller screens add more space between the navigation buttons and the pricing widget

Test Plan:
Please refer to the screenshots
This addresses the issue from 1 to 6
{F113165}

This addresses the issue 1 as well
{F113167}

This addresses the issue 8 and 9
{F113168}

This address the issue 7
{F113169}

Reviewers: jmak

Reviewed By: jmak

Subscribers: yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D28667

--- a/managed/ui/src/app/stylesheets/buttons.scss
+++ b/managed/ui/src/app/stylesheets/buttons.scss
@@ -50,6 +50,10 @@
   }
 }
 
+.btn-add-gflag {
+  margin-right: 8px;
+}
+
 .btn-orange {
   &,
   &:focus {
